--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,13 @@
      <meta name='viewport' content='width=device-width, initial-scale=1.0'>
      <meta http-equiv='X-UA-Compatible' content='ie=edge'>
 
-     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+   
 
     <script src="https://use.fontawesome.com/c6e848fb45.js"></script>
 
@@ -43,10 +45,10 @@
                           <span class="icon"></span>
                     </h2>
                       <p class="card-text">
-                          <div>Temperature: <span class='temp'>90.9</span></div>
-                          <div>Humidity: <span class='humidity'>41%</span></div>
-                          <div>Wind Speed: <span class="windSpeed">4.7 MPH</span></div>
-                          <div>UV Index: <span class="uv"></span></div>
+                          <div>Temperature: <span id='temp'>90.9</span></div>
+                          <div>Humidity: <span id='humidity'>41%</span></div>
+                          <div>Wind Speed: <span id="windSpeed">4.7 MPH</span></div>
+                          <div>UV Index: <span id="uv"></span></div>
                       </p>
                     </div>
                   </div>
