now shows 5 day forecast after initial weather

--- a/src/index.html
+++ b/src/index.html
@@ -45,10 +45,10 @@
                           <span class="icon"></span>
                     </h2>
                       <p class="card-text">
-                          <div>Temperature: <span id='temp'>90.9</span></div>
-                          <div>Humidity: <span id='humidity'>41%</span></div>
-                          <div>Wind Speed: <span id="windSpeed">4.7 MPH</span></div>
-                          <div>UV Index: <span id="uv"></span></div>
+                          <div>Temperature: <span class='temp'>90.9</span></div>
+                          <div>Humidity: <span class='humidity'>41%</span>%</div>
+                          <div>Wind Speed: <span class="windSpeed">4.7 MPH</span></div>
+                          <div>UV Index: <span class="uv"></span></div>
                       </p>
                     </div>
                   </div>
