Page now displays date with corosponding weather information

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
    
 
     <script src="https://use.fontawesome.com/c6e848fb45.js"></script>
+    <script src = "https://momentjs.com/downloads/moment.js"></script>
 
     <link rel="stylesheet" href="../Assets/CSS/style.css">
 </head>
@@ -40,14 +41,14 @@
                 <div class="card">
                     <div class="card-body">
                       <h2 class="card-title" >
-                          <span id="currentCity">Atlanta</span>
+                          <span id="currentCity">City</span>
                           <span class="date"></span>
-                          <span class="icon"></span>
+                          <img class="icon"></img>
                     </h2>
                       <p class="card-text">
-                          <div>Temperature: <span class='temp'>90.9</span></div>
-                          <div>Humidity: <span class='humidity'>41%</span>%</div>
-                          <div>Wind Speed: <span class="windSpeed">4.7 MPH</span></div>
+                          <div>Temperature: <span class='temp'></span></div>
+                          <div>Humidity: <span class='humidity'></span>%</div>
+                          <div>Wind Speed: <span class="windSpeed"></span></div>
                           <div>UV Index: <span class="uv"></span></div>
                       </p>
                     </div>
@@ -62,44 +63,44 @@
 
 
                 <div class="col-md-2 forecast">
-                    <div class="date">8/16/2019</div>
-                    <div class='icon'></div>
-                    <div>Temp: <span class="temp">90</span></div>
-                    <div>Humidity <span class="humidity">50</span>%</div>
+                    <div class="date"></div>
+                    <div><img class="icon"></img></div>
+                    <div>Temp: <span class="temp"></span></div>
+                    <div>Humidity <span class="humidity"></span>%</div>
                 </div>
 
                 <div class="col-md-2 forecast">
-                    <div class="date">8/16/2019</div>
-                    <div class='icon'></div>
-                    <div>Temp: <span class="temp">90</span></div>
-                    <div>Humidity <span class="humidity">50</span>%</div>
+                    <div class="date"></div>
+                    <div><img class="icon"></img></div>
+                    <div>Temp: <span class="temp"></span></div>
+                    <div>Humidity <span class="humidity"></span>%</div>
                 </div>
 
                 <div class="col-md-2 forecast">
-                    <div class="date">8/16/2019</div>
-                    <div class='icon'></div>
-                    <div>Temp: <span class="temp">90</span></div>
-                    <div>Humidity <span class="humidity">50</span>%</div>
+                    <div class="date"></div>
+                    <div><img class="icon"></img></div>
+                    <div>Temp: <span class="temp"></span></div>
+                    <div>Humidity <span class="humidity"></span>%</div>
                 </div>
 
                 <div class="col-md-2 forecast">
-                    <div class="date">8/16/2019</div>
-                    <div class='icon'></div>
-                    <div>Temp: <span class="temp">90</span></div>
-                    <div>Humidity <span class="humidity">50</span>%</div>
+                    <div class="date"></div>
+                    <div><img class="icon"></img></div>
+                    <div>Temp: <span class="temp"></span></div>
+                    <div>Humidity <span class="humidity"></span>%</div>
                 </div>
 
                 <div class="col-md-2 forecast">
-                    <div class="date">8/16/2019</div>
-                    <div class='icon'></div>
-                    <div>Temp: <span class="temp">90</span></div>
-                    <div>Humidity <span class="humidity">50</span>%</div>
+                    <div class="date"></div>
+                    <div><img class="icon"></img></div>
+                    <div>Temp: <span class="temp"></span></div>
+                    <div>Humidity <span class="humidity"></span>%</div>
                 </div>
             </div>
         </div>
     </div>
     <footer>
     </footer>
-
+    <!-- <script type="text/javascript" src="https://momentjs.com/downloads/moment.js"></script> -->
     <script type="text/javascript" src="../Assets/JS/main.js"></script>
 </body>
