Now shows 5 day forecast seperate from today's results

--- a/src/index.html
+++ b/src/index.html
@@ -42,14 +42,14 @@
                     <div class="card-body">
                       <h2 class="card-title" >
                           <span id="currentCity">City</span>
-                          <span class="date"></span>
-                          <img class="icon"></img>
+                          <span id="date"></span>
+                          <img id="icon"></img>
                     </h2>
                       <p class="card-text">
-                          <div>Temperature: <span class='temp'></span></div>
-                          <div>Humidity: <span class='humidity'></span>%</div>
-                          <div>Wind Speed: <span class="windSpeed"></span></div>
-                          <div>UV Index: <span class="uv"></span></div>
+                          <div>Temperature: <span id='temp'></span></div>
+                          <div>Humidity: <span id='humidity'></span>%</div>
+                          <div>Wind Speed: <span id="windSpeed"></span></div>
+                          <div>UV Index: <span id="uv"></span></div>
                       </p>
                     </div>
                   </div>
@@ -61,6 +61,13 @@
 
             <div class = "row">
 
+
+                <div class="col-md-2.2 forecast">
+                    <div class="date"></div>
+                    <div><img class="icon"></img></div>
+                    <div>Temp: <span class="temp"></span></div>
+                    <div>Humidity <span class="humidity"></span>%</div>
+                </div>
 
                 <div class="col-md-2.2 forecast">
                     <div class="date"></div>
